--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=8000
-MONGO_URL=mongodb+srv://vrinda_:Shinchan@cluster0.voqenmd.mongodb.net/new
-JWT_SECRET= HGTHw9120edhiu@34e3
+MONGO_URL=mongodb+srv://v-rinda:Shinchan@ecommerce.9fn3352.mongodb.net/
+JWT_SECRET=abcdfekfbndhjbbhewjhuygbweui
